--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,32 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Node
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
+# Next.js
+.next/
+out/
+.next-static/
+
+# Env
 .env*
+*.local
 
-# vercel
-.vercel
+# OS / Editor
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.swp
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Coverage / Reports
+coverage/
+*.lcov
+
+# Misc
+**/.cache/
+.sass-cache/
+
+
