--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,9 +21,9 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci || npm install
 
-      - name: Build and export static site
+      - name: Build (static export)
         env:
           GITHUB_PAGES: 'true'
           NEXT_PUBLIC_BASE_PATH: /${{ github.event.repository.name }}
@@ -36,6 +36,5 @@ jobs:
           publish_dir: ./out
           publish_branch: gh-pages
           force_orphan: true
-
 
 
