feat: a11y+SEO improvements, Formspree contact, Tailwind tokens, MDX case studies, Lighthouse CI/link checks; projects from JSON; cleanup unused files; contrast fixes

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -27,6 +27,8 @@ jobs:
         env:
           GITHUB_PAGES: 'true'
           NEXT_PUBLIC_BASE_PATH: /${{ github.event.repository.name }}
+          NEXT_PUBLIC_FORMSPREE_ENDPOINT: ${{ secrets.NEXT_PUBLIC_FORMSPREE_ENDPOINT }}
+          NEXT_PUBLIC_SITE_URL: https://vrajpatell.github.io/${{ github.event.repository.name }}
         run: npm run build
 
       - name: Deploy to gh-pages
