--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "set GITHUB_PAGES=true&& next build",
     "start": "next start",
     "lint": "next lint",
+    "lhci": "lhci autorun",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d out"
   },
@@ -25,9 +26,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "@eslint/eslintrc": "^3",
-    "gh-pages": "^6.1.1"
-  },
-  "optionalDependencies": {
-    "resend": "^4.0.0"
+    "gh-pages": "^6.1.1",
+    "@lhci/cli": "^0.13.0"
   }
 }
