ci: rebuild native modules on CI; refresh lockfile to ensure lightningcss binaries present

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Rebuild native modules for Linux
+        run: npm rebuild
+
       - name: Build static site (Next export)
         env:
           GITHUB_PAGES: 'true'
