--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
     "framer-motion": "^12.23.12",
+    "lightningcss": "^1.25.1",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
