--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         run: npm ci || npm install
 
+      - name: Rebuild native modules for Linux
+        run: npm rebuild
+
       - name: Build (static export)
         env:
           GITHUB_PAGES: 'true'
