--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -17,6 +17,9 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y build-essential
       - name: Install dependencies
         run: npm ci || npm install
+
+      - name: Rebuild native modules for Linux
+        run: npm rebuild
       - name: Build static export
         env:
           GITHUB_PAGES: 'true'
