ci: use ubuntu-22.04 runners, cache npm, clean ci install, ensure rebuild

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   build-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -19,12 +19,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
 
       - name: Install build tools
         run: sudo apt-get update && sudo apt-get install -y build-essential
 
-      - name: Install dependencies
-        run: npm ci || npm install
+      - name: Install dependencies (clean)
+        run: npm ci
 
       - name: Rebuild native modules for Linux
         run: npm rebuild
