--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,10 +27,15 @@ jobs:
           node-version: 20
           cache: 'npm'
 
+      - name: Ensure optional deps are enabled
+        run: npm config set optional true
+
       - name: Install build tools
         run: sudo apt-get update && sudo apt-get install -y build-essential
 
-      - name: Install dependencies
+      - name: Install dependencies (clean)
+        env:
+          NPM_CONFIG_OPTIONAL: 'true'
         run: npm ci
 
       - name: Rebuild native modules for Linux
