--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -7,12 +7,13 @@ on:
 
 jobs:
   lhci:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
       - name: Install build tools
         run: sudo apt-get update && sudo apt-get install -y build-essential
       - name: Install dependencies
