--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,13 @@ jobs:
       - name: Install build tools
         run: sudo apt-get update && sudo apt-get install -y build-essential
 
+      - name: Remove lockfile and node_modules
+        run: rm -rf node_modules package-lock.json
+
       - name: Install dependencies (clean)
         env:
           NPM_CONFIG_OPTIONAL: 'true'
-        run: npm ci
+        run: npm install
 
       - name: Rebuild native modules for Linux
         run: npm rebuild
