--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,11 +21,16 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Remove lockfile and node_modules
+        run: rm -rf node_modules package-lock.json
+
       - name: Install build tools
         run: sudo apt-get update && sudo apt-get install -y build-essential
 
       - name: Install dependencies (clean)
-        run: npm ci
+        env:
+          NPM_CONFIG_OPTIONAL: 'true'
+        run: npm install
 
       - name: Rebuild native modules for Linux
         run: npm rebuild
