--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -14,10 +14,14 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+      - name: Remove lockfile and node_modules
+        run: rm -rf node_modules package-lock.json
       - name: Install build tools
         run: sudo apt-get update && sudo apt-get install -y build-essential
       - name: Install dependencies
-        run: npm ci || npm install
+        env:
+          NPM_CONFIG_OPTIONAL: 'true'
+        run: npm install
 
       - name: Rebuild native modules for Linux
         run: npm rebuild
