feat(resume): add resume page with open/download and include PDF asset; update home link

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tsparticles/slim": "^3.9.1",
     "framer-motion": "^12.23.12",
     "lightningcss": "^1.29.0",
+    "jspdf": "^2.5.2",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
