--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "prebuild": "node scripts/generate-resume-pdf.mjs",
     "build": "set GITHUB_PAGES=true&& next build",
     "start": "next start",
     "lint": "next lint",
@@ -32,7 +33,8 @@
     "eslint-config-next": "15.4.6",
     "gh-pages": "^6.1.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "pdfkit": "^0.14.0"
   },
   "optionalDependencies": {
     "lightningcss-linux-x64-gnu": "^1.29.0"
